...
    <string name="prefs_subsection_more">More</string>
    <string name="prefs_subsection_security">Security</string>
    <string name="prefs_subsection_whatsnew">What´s new in the latest version?</string>
    <string name="prefs_subsection_security_summary">Set locks to access the app and allow touches with other visible windows</string>
    <string name="prefs_subsection_logging_summary">Keep track of logs produced by the execution of the app</string>
    <string name="prefs_subsection_more_summary">App info, feedback and others</string>
    <string name="prefs_passcode">Passcode lock</string>
    <string name="prefs_biometric">Biometric lock</string>
    <string name="prefs_biometric_summary">Enable passcode or pattern lock to enable this option</string>
    <string name="prefs_lock_application">Lock application</string>
    <string name="prefs_lock_application_entries_immediately">Immediately</string>
    <string name="prefs_lock_application_entries_1minute">After 1 minute</string>
    <string name="prefs_lock_application_entries_5minutes">After 5 minutes</string>
    <string name="prefs_lock_application_entries_30minutes">After 30 minutes</string>
    <string name="prefs_lock_access_from_document_provider">Lock access from document provider</string>
    <string name="prefs_lock_access_from_document_provider_summary">Lock access from other apps to the files of the accounts in the app via the Android native file explorer.</string>
    <string name="prefs_touches_with_other_visible_windows">Touches with other visible windows</string>
    <string name="prefs_touches_with_other_visible_windows_summary">Allow touches when the view is obscured by another visible window. Enable it to use light filtering apps.</string>
    <string name="confirmation_touches_with_other_windows_title">Are you sure you want to enable this feature?</string>
    <string name="confirmation_touches_with_other_windows_message">Use this feature at your own risk. A malicious application could try to spoof you into unknowingly performing some actions, using other views.</string>
    <string name="prefs_subsection_picture_uploads">Automatic picture uploads</string>
    <string name="prefs_subsection_picture_uploads_summary">Manage location and behavior of the pictures uploaded automatically</string>
    <string name="prefs_subsection_video_uploads">Automatic video uploads</string>
    <string name="prefs_subsection_video_uploads_summary">Manage location and behavior of the videos uploaded automatically</string>
    <string name="prefs_camera_picture_upload">Picture uploads</string>
    <string name="prefs_camera_picture_upload_summary">Automatically upload pictures taken by camera</string>
...
    <string name="prefs_sync_calendar_contacts_summary">Install DAVx⁵</string>
    <string name="prefs_access_document_provider">Access document provider</string>
    <string name="prefs_access_document_provider_summary">Suggested app to browse the files on your device via the Android native file explorer</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_feedback">Feedback</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_pattern"> Pattern lock </string>
    <string name="prefs_enable_logging">Enable logging</string>
    <string name="prefs_enable_logging_summary">When activated, logs may impact performance and include sensitive information. However the logs are not subject to automatic submission to ownCloud servers. Sharing logs with others is sole user responsibility.</string>
    <string name="prefs_send_feedback">Send feedback</string>
    <string name="prefs_app_version">App version</string>
    <string name="prefs_app_version_summary">%1$s %2$s version %3$s (%4$s)</string>
    <string name="pattern_enter_pattern">Please enter your pattern</string>
    <string name="pattern_configure_pattern">Enter your pattern</string>
    <string name="pattern_remove_pattern">Remove your pattern</string>
    <string name="pattern_incorrect_pattern">Incorrect pattern</string>
    <string name="pattern_reenter_pattern">Please re-enter your pattern.</string>
    <string name="pattern_not_same_pattern">The patterns are not the same.</string>
    <string name="pattern_already_set">Pattern and passcode locks cannot be enabled at the same time, please disable pattern first.</string>
    <string name="passcode_already_set">Pattern and passcode locks cannot be enabled at the same time, please disable passcode first.</string>
    <string name="pattern_no_longer_required">The pattern will not be asked for anymore.</string>
    <string name="pattern_configure_your_pattern_explanation">The pattern will be requested every time the app is started.</string>
    <string name="document_provider_locked">Locked</string>
    <string name="illegal_argument_exception_message">A valid ACTION is needed in the intent passed to</string>

    <!-- Bottom navigation bar -->
...
    <string name="filedetails_download">Download</string>
    <string name="filedetails_file_image_content_description">File Image</string>
    <string name="filedetails_cancel_btn_content_description">Cancel download button</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="action_share">Share</string>
    <string name="login_account_preparing">Preparing account for first launch</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_back">Back</string>
    <string name="common_loading">Loading…</string>
    <string name="common_error_unknown">unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="common_important">Important</string>
...
